--- a/style.css
+++ b/style.css
@@ -1,61 +1,92 @@
-*{
+	*{
 		margin:0;
 		padding: 0;
 		box-sizing: border-box;
 	}
 
-	.settings{
-		display: flex;
-		flex-direction: row;
-		align-content: center;
-		transform: translateX(-100%);
-transition: transform 1s;
+	body {
+	   background-color: #c670ca;
+	   background-image: url("image/broswify.jpg"); 
+	}
+	
+	html {
+	   height: 100%;
 	}
 
 
+	.settings{
+		flex-direction: row;
+		align-content: center;
+		transform: translateX(-100%);
+		transition: transform 1s;
+		background: rgba(15,15,15,.925);
+		width: 45%;
+	    box-sizing: border-box;
+	    overflow-x: hidden;
+	    overflow-y: auto;
+	    text-align: left;
+	    text-shadow: none;
+	    padding: 12px 12px;
+	    position: absolute;
+	    border-radius: 6px;
+	    left: 6px;
 
+	}
+
+	.settings h3 {
+		font-size: 146.66667%;
+    	font-weight: 500;
+    	color: #f4f4f4;
+	}
+
+	.settings ul  {
+		list-style: none;
+		padding:0;
+	}
+
+
+	.settings li {
+		padding: 5px 0px;
+		border-right-style: solid;
+		border-right-color: coral;  
+		}
+
+	.settings input[type=text]{
+		width: 62%;
+		border:1px solid outset;
+		margin-left: 5px;
+		box-sizing: border-box;
+		border-radius: 4px;
+
+	}
+
+	.settings input[type=submit]{
+		width: 25%;
+		border:1px solid outset;
+		margin-left: 5px;
+		box-sizing: border-box;
+		border-radius: 4px;
+
+	}
 
 
 	.settings-opened{
 		 transform: none;
 	}
 
-	input[type=text]{
-		padding: 12px 20px;
-	width: 62%;
-	border:1px solid outset;
-	margin-left: 12px;
-	box-sizing: border-box;
-	border-radius: 4px;
-
-	}
-	input[type=submit]{
-		padding: 12px 10px;
-	width: 25%;
-	border:1px solid outset;
-	margin-left: 5px;
-	box-sizing: border-box;
-	border-radius: 4px;
-
-	}
 
 	button{
 		height: 30px;
 		width: 70px;
 		background: none;
-	border:none;
+		border:none;
 		font-size: 12px;
 		cursor: pointer;
 		color: #f4f4f4;
 
 	}
 
-	.add{
-		background-color: #ddd;
-    padding: 12px 23px;
-    border-radius: 0px 5px 5px 0px;
-	}
-
+	
 	.btn-weather{
 		float: right;
 	}
@@ -79,25 +110,66 @@ transition: transform 1s;
 		color: #f4f4f4;
 	}
 
-.greeting-container {
-   display: flex;
-   justify-content: center;
-   align-content: center;
+	.greeting-container {
+	   display: flex;
+	   justify-content: center;
+	   align-content: center;
+	}
+
+
+	.greeting {
+	   font-family: sans-serif;
+	   font-size: 146.66667%;
+	   font-weight: 500;
+	   color: #f4f4f4;
+	   margin-top: 50px;
+	}
+
+/* Task wrapper settings*/
+
+.task-wrapper{
+background-color: hsla(0, 100%, 90%, 0.3);
+    
+    width: 75% !important;
+    margin: 5% auto;
+    height: 100px;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
-.greeting {
-   font-family: sans-serif;
-   font-size: 45px;
-   color: #fff;
-   margin-top: 50px;
+.tasklist{
+	float: left;
+	margin-left: 15px;
+	width: 50%;
 }
-body {
-   background-color: #c670ca;
-/*   background-image: linear-gradient(45deg, #c670ca 0%, #25a5c8 52%, #20e275 90%);
-*/  
-background-image: url("image/broswify.jpg"); 
+
+
+.todoApp {
+    width: 45%;
+    margin: 2% 40%;
 }
-html {
-   height: 100%;
+
+.input{
+		background-color: #ddd;
+	    padding: 12px 23px;
+	    border-radius: 5px 0px 0px 5px;
+	}
+
+
+.add{
+		background-color: #ddd;
+	    padding: 12px 23px;
+	    border-radius: 0px 5px 5px 0px;
+	}
+
+
+.completedtask{
+	 width: 40%;
+    float: left;
+    margin-left: 15px;
+    margin-top: 12px;
 }
+
+
+/* End of task wwrapper settings*/
