--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 	body {
 	   background-color: #c670ca;
-	   background-image: url("image/broswify.jpg"); 
+	   background-image: url("image/background.jpg"); 
 	}
 	
 	html {
@@ -125,35 +125,131 @@
 	   margin-top: 50px;
 	}
 
+	h2#greeting{
+		font-size: 3em;
+		font-weight: bolder;
+	}
+
+	h2#time-of-day{
+		font-size: 3em;
+		font-weight: bolder;
+	}
+
+
 /* Task wrapper settings*/
+
+
+
 
 .task-wrapper{
 background-color: hsla(0, 100%, 90%, 0.3);
-    
+    display: block;
+    overflow-y: scroll;
+    overflow-x: hidden;
     width: 75% !important;
     margin: 5% auto;
-    height: 100px;
+    height: 200px;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 }
 
+
+
+::-webkit-scrollbar {
+   width: 5px;
+   height:7px;
+
+  }
+ /* Track */
+   ::-webkit-scrollbar-track {
+     background: #888; 
+    }
+
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+    background: #e51837; 
+  }
+
+  /* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+    background: #e51837; 
+  }
 
 .tasklist{
 	float: left;
 	margin-left: 15px;
 	width: 50%;
+	margin-top: 12px;
 }
+
+
+.tasklist ul{
+	list-style: none;
+	
+	counter-reset: li;
+    *list-style: decimal;
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    
+    margin-bottom: 4em;
+
+}
+
+.tasklist ul li{
+	position: relative;
+    display: block;
+    padding: .4em .4em .4em 2em;
+    *padding: .4em;
+    margin: .5em 0;
+    background: rgba(9,15,10,.925);
+    color: #f4f4f4;
+    text-decoration: none;
+    -moz-border-radius: .3em;
+    -webkit-border-radius: .3em;
+    border-radius: 10em 9em 9em 10em;
+    transition: all .2s ease-in-out;
+    box-shadow: -3px 4px 4px rgba(0, 0, 0, .5);
+}
+
+
+.tasklist ul li:nth-child(2n-2) {
+    
+    border-radius: 9em 10em 10em 9em;
+    box-shadow: 4px 3px 2px rgba(0, 0, 0, .5);
+}
+
+.tasklist ul li:nth-child(2n-2):hover {
+    background-color: #fff;
+    border-radius: 9em 10em 10em 9em;
+    box-shadow: 4px 3px 2px rgba(0, 0, 0, .5);
+}
+
+
+.tasklist ul li:hover{
+	padding: 4px 9px;
+	background-color: #f4f4f4; 
+	border-radius: 6px;
+	color:#000;
+	text-decoration: none;
+	font-size: 1em;
+	border-radius: 10em 9em 9em 10em;
+}
+
 
 
 .todoApp {
     width: 45%;
-    margin: 2% 40%;
+    margin: 2% 28%;
 }
 
 .input{
 		background-color: #ddd;
 	    padding: 12px 23px;
 	    border-radius: 5px 0px 0px 5px;
+	    width: 80%;
+	    border: none;
+	    box-sizing: border-box;
 	}
 
 
@@ -172,4 +268,4 @@ background-color: hsla(0, 100%, 90%, 0.3);
 }
 
 
-/* End of task wwrapper settings*/
+/* End of task wrapper settings*/
