jquery draggable and sortable classes have been added to the project

--- a/style.css
+++ b/style.css
@@ -268,4 +268,8 @@ background-color: hsla(0, 100%, 90%, 0.3);
 }
 
 
+#sortable1, #sortable2{
+	list-style: none;
+}
+
 /* End of task wrapper settings*/
