--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 	body {
 	   background-color: #c670ca;
-	   background-image: url("image/background.jpg"); 
+	   background-image: url("image/browsify.jpg"); 
 	}
 	
 	html {
@@ -102,7 +102,7 @@
 	.fa{
 		font-size: 18px;
 	}
-
+''
 
 	#timing{
 		font-weight: 900;
@@ -210,6 +210,7 @@ background-color: hsla(0, 100%, 90%, 0.3);
     border-radius: 10em 9em 9em 10em;
     transition: all .2s ease-in-out;
     box-shadow: -3px 4px 4px rgba(0, 0, 0, .5);
+    overflow: hidden;
 }
 
 
@@ -234,6 +235,12 @@ background-color: hsla(0, 100%, 90%, 0.3);
 	text-decoration: none;
 	font-size: 1em;
 	border-radius: 10em 9em 9em 10em;
+}
+
+
+
+i.fa-trash {
+    float: right;
 }
 
 
